# Projekt_PO_WAT_3

./: .gitignore  CMakeLists.txt  a.srctrldb  a.srctrlprj  main.cpp
UI/: main.cpp  main.h
include/: Istoty.h  Pojazdy.h  Postacie.h  Przedmioty.h  Struktury.h
src/: Istoty.cpp  Pojazdy.cpp  Postacie.cpp  Przedmioty.cpp  Struktury.cpp
src/Logic/creature/include/: Creature.h  CreatureStatistics.h
src/Logic/creature/src/: Creature.cpp  CreatureStatistics.cpp
src/Logic/include/: Board.h  CreatureTurnQueue.h  GameEngine.h  Point.h  Range.h
src/Logic/src/: Board.cpp  CreatureTurnQueue.cpp  GameEngine.cpp  Point.cpp  Range.cpp
src/Test/: Board.cpp  BoardTest.cpp  Creature.cpp  CreatureStatistics.cpp  CreatureStatisticsTest.cpp  CreatureTest.cpp  CreatureTurnQueueTest.cpp  Point.cpp  PointTest.cpp  Range.cpp  RangeTest.cpp  main.cpp
